@@ -25,6 +25,8 @@ bzr-svn 0.4.10  UNRELEASED
    * Cache last revision number during read locks, significantly speeds
      up push.
 
+   * Use different cache for experimental versions of bzr-svn.
+
   INTERNALS
 
    * Branching from a Subversion repository will now fetch right-hand side 
